--- a/store/templates/bases/base.html
+++ b/store/templates/bases/base.html
@@ -26,14 +26,14 @@
   <!-- Title -->
   <title>{% block title %}Title{% endblock %}</title>
   <!-- CSS -->
-  <link href="{% static 'store/css/bootstrap.min.css' %}" />
-  <link href="{% static 'store/css/font-awesome.min.css' %}" />
-  <link href="{% static 'store/css/Pe-icon-7-stroke.css' %}" />
-  <link href="{% static 'store/css/animate.min.css' %}">
-  <link href="{% static 'store/css/swiper-bundle.min.css' %}">
-  <link href="{% static 'store/css/nice-select.css' %}">
-  <link href="{% static 'store/css/magnific-popup.min.css' %}" />
-  <link href="{% static 'store/css/ion.rangeSlider.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'store/css/bootstrap.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'store/css/font-awesome.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'store/css/Pe-icon-7-stroke.css' %}" />
+  <link rel="stylesheet" href="{% static 'store/css/animate.min.css' %}">
+  <link rel="stylesheet" href="{% static 'store/css/swiper-bundle.min.css' %}">
+  <link rel="stylesheet" href="{% static 'store/css/nice-select.css' %}">
+  <link rel="stylesheet" href="{% static 'store/css/magnific-popup.min.css' %}" />
+  <link rel="stylesheet" href="{% static 'store/css/ion.rangeSlider.min.css' %}" />
   <!-- Style CSS -->
   <link rel="stylesheet" href="{% static 'store/css/style.css' %}">
   <!-- Extra CSS block -->
